vlib/v/checker/tests/immutable_array_var.vv
fn main() {
	a := [1, 2]
	a << 3
}
